--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -14,7 +14,6 @@ body {
     margin-top: 30px;
     left: 40px;
     right: 40px;
-    /* overflow-y: scroll; */
     width: fit-content;
     height: fit-content;
     position: absolute;
@@ -97,7 +96,7 @@ body {
     width: 48%;
     display: flex;
     align-items: flex-end;
-    padding-left: 15px;
+    padding-left: 15px; /* Added to increase spacing */
     font-size: 20px;
     margin-left: 20px;
 }
@@ -127,7 +126,7 @@ body {
 }
 
 #reserve-button-inner {
-    background-color: #ff5a5f;
+    background-color: #800000; /* Updated to a darker red */
     color: white;
     height: 50px;
     align-content: center;
@@ -139,15 +138,12 @@ body {
     display: flex;
     flex-direction: column;
     height: fit-content;
-    /* align-items: flex-start; */
     align-items: center;
 }
-
 
 #reviews-header-container {
     margin-top: 10px;
 }
-
 
 span {
     font-size: 18px;
@@ -188,7 +184,6 @@ span {
 #all-reviews-div {
     margin-bottom: 30px;
     height: fit-content;
-    /* border: 1px solid red; */
 }
 
 .modal-buttons {
