--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -1,3 +1,4 @@
+/* The modal takes up the whole screen. The display is set to flex to center its content. */
 #modal {
   position: fixed;
   top: 0;
@@ -9,6 +10,7 @@
   align-items: center;
 }
 
+/* The modal background also takes up the whole screen. It has a semi-transparent black background to darken the rest of the page. */
 #modal-background {
   position: fixed;
   top: 0;
@@ -18,6 +20,7 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+/* The modal content is centered thanks to the display properties of #modal. It has a white background and a solid black border. */
 #modal-content {
   position: absolute;
   background-color: white;
