--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -1,25 +1,14 @@
 body {
     width: 100%;
     display: flex;
-}
-
-.spot-card-parent-div {
-    width: 210px;
-    height: 225px;
-    margin: 10px 0px 20px 30px;
-    z-index: -1;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    color: #484848; /* Airbnb Black text color */
+    font-family: 'Roboto', sans-serif; /* Google Font Roboto */
+    background-color: #f7f7f7; /* Airbnb background color */
 }
 
 #landing-page-parent-div {
     margin-top: 40px;
     position: fixed;
-    /* width: 100%; */
-    /* max-width: 1024px; */
-    /* height: fit-content; */
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -37,4 +26,24 @@ body {
     flex-flow: row wrap;
     overflow-y: scroll;
     max-width: 1024px;
+}
+
+.spot-card-parent-div {
+    width: 210px;
+    height: 225px;
+    margin: 10px 0px 20px 30px;
+    z-index: -1;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #fff; /* Airbnb White cards */
+    border: 2px solid #EBEBEB; /* Airbnb Light gray border */
+    border-radius: 10px; /* Rounded corners */
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); /* Airbnb Card shadow */
+}
+
+.spot-card-parent-div:hover {
+    transform: scale(1.05); /* Slightly enlarge the card when hovered */
+    transition: all 0.3s ease; /* Smooth transition */
 }
