--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -17,7 +17,7 @@ body {
   font-weight: bold;
   margin-left: 8px;
   margin-top: 12px;
-  color: #FF5A5F;
+  color: #1eaeda; /* Updated color to white-blue */
   justify-self: center;
   text-align: center;
 }
@@ -37,18 +37,17 @@ body {
   width: 30px;
   height: 0.25rem;
   border-radius: 10px;
-  background-color: black;
+  background-color: gray;
   transform-origin: 1px;
   transition: all 0.3s linear;
 }
-
 
 .hamburger-nav-active {
   background-color: white;
   padding-left: 10px;
   padding-right: 5px;
   padding-top: 5px;
-  border: 1px solid black;
+  border: 1px solid gray;
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -57,13 +56,16 @@ body {
   position: absolute;
 }
 
-ul > div, ul > button {
+ul > div,
+ul > button {
   margin-top: 2px;
   margin-bottom: 2px;
 }
 
-
-#user-username, #user-name, #user-email, #logout-li {
+#user-username,
+#user-name,
+#user-email,
+#logout-li {
   text-align: center;
   width: 110px;
   align-self: center;
@@ -79,7 +81,7 @@ ul > div, ul > button {
   flex-flow: row nowrap;
   width: 80px;
   height: 40px;
-  border: 1px solid black;
+  border: 1px solid gray;
   border-radius: 18px;
   justify-content: space-evenly;
   align-items: center;
@@ -103,7 +105,9 @@ ul > div, ul > button {
   background-color: white;
 }
 
-.home-navlink-div, .login-navlink-div, .signup-navlink-div {
+.home-navlink-div,
+.login-navlink-div,
+.signup-navlink-div {
   margin: auto 5px;
 }
 
@@ -136,7 +140,7 @@ a {
   flex-flow: row nowrap;
   width: 80px;
   height: 40px;
-  border: 1px solid black;
+  border: 1px solid gray;
   border-radius: 18px;
   justify-content: space-evenly;
   align-items: center;
