--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,9 +1,7 @@
 .profile-dropdown {
     background-color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
-    border: 1px solid black;
+    padding: 10px;
+    border: 1px solid #DBDBDB;
     height: 155px;
     display: flex;
     flex-direction: column;
@@ -14,6 +12,7 @@
     list-style-type: none;
     justify-self: flex-end;
     z-index: 2;
+    box-shadow: 0 2px 5px rgba(0,0,0,.1);
 }
 
 .profile-dropdown > li {
@@ -37,7 +36,7 @@
 }
 
 #user-username-info {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #DBDBDB;
     font-size: 12px;
     height: 15px;
     margin-top: 4px;
@@ -49,7 +48,7 @@
     font-size: 12px;
     height: 20px;
     margin-top: 4px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #DBDBDB;
 }
 
 .logout-profile-button {
@@ -60,7 +59,7 @@
     width: 70px;
     height: 30px;
     border: 1px solid black;
-    background-color: #666666;
+    background-color: #872D30; /* Updated color to darker red */
     margin-top: 8px;
     margin-bottom: 2px;
     border-radius: 40px;
@@ -85,11 +84,12 @@
 #manage-spots-div {
     margin-top: 3px;
     padding-bottom: 3px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #DBDBDB;
 }
 
 .manage-spots-button {
     border: none;
-    background-color: white;
+    background-color: #872D30; /* Updated color to darker red */
     font-family: 'Montserrat', sans-serif;
+    color: white; /* Changed text color to white for contrast */
 }
