--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -10,9 +10,17 @@ body {
     box-sizing: border-box;
     flex-direction: column;
     width: 300px;
-    height: 250px;
+    min-height: 250px; /* Changed from 'height' to 'min-height' */
     border: 2px solid #9370DB; /* Medium purple border */
     border-radius: 10px;
+    padding-bottom: 10px; /* Added some padding at the bottom */
+}
+
+#errors-display {
+    color: red;
+    font-size: 12px;
+    text-align: center; /* Center the text */
+    margin-top: 10px; /* Added some margin at the top for spacing */
 }
 
 #login-text {
